--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,25 +21,16 @@
     xmlns:h="http://java.sun.com/jsf/html"
     template="/WEB-INF/templates/default.xhtml">
     <ui:define name="content">
-        <h1>Welcome to JBoss!</h1>
-
-        <div>
-            <p>You have successfully deployed a Java EE 6 Enterprise
-                Application.</p>
-            <h3>Your application can run on:</h3>
-            <img src="resources/gfx/dualbrand_as7eap.png" />
-        </div>
+        <h1>Surfing ry jäsenlista</h1>
 
         <h:form id="reg">
-            <h2>Member Registration</h2>
-            <p>Enforces annotation-based constraints defined on the
-                model class.</p>
+            <h2>Liity postilistallemme</h2>
             <h:panelGrid columns="3" columnClasses="titleCell">
-                <h:outputLabel for="name" value="Name:" />
+                <h:outputLabel for="name" value="Nimi:" />
                 <h:inputText id="name" value="#{newMember.name}" />
                 <h:message for="name" errorClass="invalid" />
 
-                <h:outputLabel for="email" value="Email:" />
+                <h:outputLabel for="email" value="Sähköposti:" />
                 <h:inputText id="email" value="#{newMember.email}" />
                 <h:message for="email" errorClass="invalid" />
             </h:panelGrid>
@@ -48,39 +39,39 @@
                 <h:panelGrid columns="2">
                     <h:commandButton id="register"
                         action="#{memberController.register}"
-                        value="Register" styleClass="register" />
+                        value="Rekisteröi" styleClass="register" />
                     <h:messages styleClass="messages"
                         errorClass="invalid" infoClass="valid"
                         warnClass="warning" globalOnly="true" />
                 </h:panelGrid>
             </p>
         </h:form>
-        <h2>Members</h2>
+        <h2>Jäsenet</h2>
         <h:panelGroup rendered="#{empty members}">
-            <em>No registered members.</em>
+            <em>Ei rekisteröityjä jäseniä.</em>
         </h:panelGroup>
         <h:dataTable var="_member" value="#{members}"
             rendered="#{not empty members}"
             styleClass="simpletablestyle">
             <h:column>
-                <f:facet name="header">Id</f:facet>
+                <f:facet name="header">Numero</f:facet>
                 #{_member.id}
             </h:column>
             <h:column>
-                <f:facet name="header">Name</f:facet>
+                <f:facet name="header">Nimi</f:facet>
                 #{_member.name}
             </h:column>
             <h:column>
-                <f:facet name="header">Email</f:facet>
+                <f:facet name="header">Sähköposti</f:facet>
                 #{_member.email}
             </h:column>
             <h:column>
-                <f:facet name="header">REST URL</f:facet>
+                <f:facet name="header">REST URL (ohjelmoijille)</f:facet>
                 <a
                     href="#{request.contextPath}/rest/members/#{_member.id}">/rest/members/#{_member.id}</a>
             </h:column>
             <f:facet name="footer">
-            REST URL for all members: <a
+            REST URL kaikille jäsenille: <a
                     href="#{request.contextPath}/rest/members">/rest/members</a>
             </f:facet>
         </h:dataTable>
